# RedBack-Media-Backend

./: .gitignore  .gitmodules  BUILD.sh  CMakeLists.txt  README.md
config/: config.txt
src/: Client.cpp  Client.h  CreateSessionDescriptionObserverImp.cpp  CreateSessionDescriptionObserverImp.h  CustomWebSocket.cpp  CustomWebSocket.h  EventSocket.cpp  EventSocket.h  ListeningServer.cpp  ListeningServer.h  PeerConnectionBuilder.cpp  PeerConnectionBuilder.h  PeerConnectionCommon.h  PeerConnectionHelpers.cpp  PeerConnectionHelpers.h  PeerConnectionObserverImp.cpp  PeerConnectionObserverImp.h  Server.cpp  SetSessionDescriptionObserverImp.h  Source.cpp  VideoCapturer.h  VideoTrackSourceImp.h  client.h  config.h  main.cpp  mainClient.cpp  mainServer.cpp  server.h
